--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>YouTube Downloader</title>
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
